# proyecto3grafica

./: CMakeLists.txt  basic_lighting_diffuse.cpp
buil/: CMakeCache.txt  Makefile  a.cpp  a.out  cmake_install.cmake  superficie
